compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__module_could_not_unify_let_binding_annotation_follow_up.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 748
expression: "\npub fn main() {\n  let x: String = 5\n  let y: Int = x\n  let z: String = x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let x: String = 5
  let y: Int = x
  let z: String = x
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:3:19
  │
3 │   let x: String = 5
  │                   ^

Expected type:

    String

Found type:

    Int

error: Type mismatch
  ┌─ /src/one/two.gleam:4:16
  │
4 │   let y: Int = x
  │                ^

Expected type:

    Int

Found type:

    String
