compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__multiple_constant_unsupported_binops.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "const a = [\n  1 + 2,\n  1 - 2,\n  \"this is ok\" <> \"no error here!\",\n  1 * 2,\n  1 >=. 3.0,\n]"
---
----- SOURCE CODE
const a = [
  1 + 2,
  1 - 2,
  "this is ok" <> "no error here!",
  1 * 2,
  1 >=. 3.0,
]

----- ERROR
error: Unsupported operator in constant expression
  ┌─ /src/one/two.gleam:2:5
  │
2 │   1 + 2,
  │     ^

This operator is currently not supported in constants.

error: Unsupported operator in constant expression
  ┌─ /src/one/two.gleam:3:5
  │
3 │   1 - 2,
  │     ^

This operator is currently not supported in constants.

error: Unsupported operator in constant expression
  ┌─ /src/one/two.gleam:5:5
  │
5 │   1 * 2,
  │     ^

This operator is currently not supported in constants.

error: Unsupported operator in constant expression
  ┌─ /src/one/two.gleam:6:5
  │
6 │   1 >=. 3.0,
  │     ^^^

This operator is currently not supported in constants.
