compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__no_crash_on_duplicate_definition.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\ntype Wibble {\n  Wobble\n  Wobble\n}\n\npub fn main() {\n  let wibble = Wobble\n  case wibble {\n    Wobble -> Nil\n  }\n}\n"
---
error: Duplicate definition
  ┌─ /src/one/two.gleam:3:3
  │
3 │   Wobble
  │   ^^^^^^ First defined here
4 │   Wobble
  │   ^^^^^^ Redefined here

`Wobble` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
