compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__no_crash_on_duplicate_record_fields.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type X {\n  A\n  B(e0: Int, e0: Int)\n}\n\nfn compiler_crash(x: X) {\n  case x {\n    A -> todo\n    _ -> todo\n  }\n}\n  "
---
error: Duplicate label
  ┌─ /src/one/two.gleam:2:1
  │
2 │ pub type X {
  │ ^^^^^^^^^^

The label `e0` has already been defined. Rename this label.
